--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "three": "^0.76.1"
   }
 }
