--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.2.0",
     "file-loader": "^0.8.5",
@@ -26,7 +27,14 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-plugin-syntax-decorators": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "lodash": "^4.11.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "react-three-renderer": "^2.0.0",
+    "redux": "^3.5.2",
     "three": "^0.76.1",
     "three-orbit-controls": "^72.0.0"
   }
