--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["syntax-decorators"]
+  "plugins": ["transform-decorators-legacy"]
 }
