--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.5.0",
     "lodash": "^4.11.1",
     "react": "^15.0.1",
+    "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "react-three-renderer": "^2.0.0",
